objects/Life_Style__c.object
<CustomObject>
    <fields>
        <fullName>Urinary_Bowel_AGURINAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urinary/Bowel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_AGVSN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight_AGWEIGHT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weight</label>
        <type>Checkbox</type>
    </fields>
    <label>Life Style</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Life Style Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life Styles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>